# forgequant

./: .env.example  .gitignore  README.md  forgequant.md  phase 1.md  phase 2.md  phase 3.md  phase 4.md  phase 5.md  phase 6.md  phase 7.md  phase 8.md  pyproject.toml  ui.md
ai_forge/: __init__.py  grounding.py  prompt.py
core/: __init__.py  config.py  logging.py
core/compiler/: __init__.py
core/generator/: __init__.py
core/robustness/: __init__.py
core/workflow/: __init__.py
execution/: __init__.py
frontend/: __init__.py
frontend/components/: __init__.py
frontend/pages/: __init__.py
src/forgequant/: __init__.py  cli.py
src/forgequant/ai_forge/: __init__.py  exceptions.py  grounding.py  pipeline.py  prompt.py  providers.py  schemas.py  validator.py
src/forgequant/blocks/: __init__.py  _utils.py  base.py  metadata.py  registry.py
src/forgequant/blocks/entry_rules/: __init__.py  confluence.py  crossover.py  reversal_pattern.py  threshold_cross.py
src/forgequant/blocks/exit_rules/: __init__.py  breakeven_stop.py  fixed_tpsl.py  time_based_exit.py  trailing_stop.py
src/forgequant/blocks/filters/: __init__.py  max_drawdown_filter.py  spread_filter.py  trading_session.py  trend_filter.py
src/forgequant/blocks/indicators/: __init__.py  adx.py  atr.py  bollinger_bands.py  ema.py  ichimoku.py  macd.py  rsi.py  stochastic.py
src/forgequant/blocks/money_management/: __init__.py  atr_based_sizing.py  fixed_risk.py  kelly_fractional.py  volatility_targeting.py
src/forgequant/blocks/price_action/: __init__.py  breakout.py  pullback.py  (+2 more)
src/forgequant/core/: __init__.py  config.py  exceptions.py  logging.py  types.py
src/forgequant/execution/: __init__.py  mt5_client.py  order_manager.py  position_tracker.py  signal_translator.py
src/forgequant/frontend/: __init__.py  app.py  styles.py
src/forgequant/knowledge_base/: __init__.py
src/forgequant/scripts/: __init__.py
strategies_library/: __init__.py  base.py  registry.py
strategies_library/blocks/: __init__.py
strategies_library/blocks/entry_rules/: __init__.py  confluence.py  crossover.py  reversal_pattern.py  threshold_cross.py
strategies_library/blocks/exit_rules/: __init__.py  breakeven_stop.py  fixed_tp_sl.py  time_based_exit.py  trailing_stop.py
strategies_library/blocks/filters/: __init__.py  max_drawdown_filter.py  spread_filter.py  trading_session.py  trend_filter.py
strategies_library/blocks/indicators/: __init__.py  adx.py  atr.py  bollinger_bands.py  ema.py  ichimoku.py  macd.py  rsi.py  stochastic.py
strategies_library/blocks/money_management/: __init__.py  atr_based_sizing.py  fixed_risk.py  kelly_fractional.py  volatility_targeting.py
strategies_library/blocks/price_action/: __init__.py  breakout.py  higher_high_lower_low.py  pullback.py  support_resistance.py
strategies_library/safety/: __init__.py  forbidden_patterns.yaml  rules.yaml
strategies_library/templates/: __init__.py  breakout_momentum.py  mean_reversion.py  scalper.py  trend_follower.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_ai_forge_integration.py  test_indicator_registry.py  test_phase3_registry.py  test_phase4_registry.py  test_phase6_end_to_end.py  test_phase7_robustness.py
tests/unit/: __init__.py  test_all_blocks.py  test_base_block.py  test_blocks.py  test_config.py  test_coverage_gaps.py  test_exceptions.py  test_indicators.py  test_logging.py  test_metadata.py  test_registry.py  test_types.py
tests/unit/ai_forge/: __init__.py  test_grounding.py  test_pipeline.py  test_prompt.py  test_providers.py  test_schemas.py  test_validator.py
tests/unit/compiler/: __init__.py  test_compiled_strategy.py  test_compiler.py  test_signal_assembler.py
tests/unit/engine/: test_backtester.py  test_metrics.py  test_results.py
tests/unit/entry_rules/: __init__.py  test_confluence.py  test_crossover.py  test_reversal_pattern.py  test_threshold_cross.py
tests/unit/execution/: test_mt5_client.py  test_order_manager.py  test_position_tracker.py  test_signal_translator.py
tests/unit/exit_rules/: __init__.py  test_breakeven_stop.py  test_fixed_tpsl.py  test_time_based_exit.py  test_trailing_stop.py
tests/unit/filters/: __init__.py  test_max_drawdown_filter.py  test_spread_filter.py  test_trading_session.py  test_trend_filter.py
tests/unit/indicators/: __init__.py  test_adx.py  test_atr.py  test_bollinger_bands.py  test_ema.py  test_ichimoku.py  test_macd.py  test_rsi.py  test_stochastic.py
tests/unit/money_management/: __init__.py  test_atr_based_sizing.py  test_fixed_risk.py  test_kelly_fractional.py  test_volatility_targeting.py
tests/unit/price_action/: __init__.py  test_breakout.py  test_higher_high_lower_low.py  test_pullback.py  test_support_resistance.py
tests/unit/robustness/: __init__.py  test_cpcv.py  test_monte_carlo.py  test_parameter_sensitivity.py  test_stability.py  test_suite.py  test_walk_forward.py
(+37 files in other folders)
