[project]
name = "forgequant"
version = "0.1.0"
description = "ForgeQuant — Open source systematic strategy generation platform. Our archetype of StrategyQuant X."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "your@email.com" },
]
requires-python = ">=3.13"

dependencies = [
    # === Core Python ===
    "pandas>=2.2.0",
    "numpy>=2.0.0",
    "polars>=1.0.0",
    "scipy>=1.14.0",

    # === Configuration & Validation ===
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.1",

    # === Logging ===
    "structlog>=24.1.0",

    # === Backtesting & Evaluation ===
    "vectorbt>=0.26.0",

    # === AI / LLM ===
    "instructor>=1.0.0",
    "openai>=1.30.0",
    "chromadb>=0.5.0",

    # === UI Dashboard ===
    "reflex>=0.5.0",
    "plotly>=5.22.0",

    # === HTTP Client ===
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pre-commit>=3.7.0",
]
execution = [
    "aiomql>=4.1.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "core",
    "ai_forge",
    "execution",
    "strategies_library",
]

[tool.ruff]
line-length = 100
target-version = "py312"
select = [
    "E",     # pycodestyle errors
    "F",     # pyflakes
    "I",     # isort (import sorting)
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "ARG",   # flake8-unused-arguments
]
ignore = ["E501"]   # We handle line length via line-length setting

[tool.ruff.isort]
known-first-party = ["core", "ai_forge", "execution", "strategies_library"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
