[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "forgequant"
version = "0.1.0"
description = "Open-source StrategyQuant X–style systematic strategy generation platform"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
    { name = "ForgeQuant Contributors" },
]
keywords = [
    "quantitative-finance",
    "algorithmic-trading",
    "strategy-generation",
    "backtesting",
    "metatrader5",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
    "Typing :: Typed",
]

dependencies = [
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "structlog>=24.1.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
ai = [
    "openai>=1.12.0",
    "instructor>=1.0.0",
    "chromadb>=0.4.22",
]
backtest = [
    "vectorbt>=0.26.0",
]
execution = [
    "aiomql>=1.0.0",
]
frontend = [
    "reflex>=0.4.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pandas-stubs>=2.1.0",
    "pre-commit>=3.6.0",
]
all = [
    "forgequant[ai,backtest,execution,frontend,dev]",
]

[project.urls]
Homepage = "https://github.com/Amberesaiae/forgequant"
Repository = "https://github.com/Amberesaiae/forgequant"
Issues = "https://github.com/Amberesaiae/forgequant/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/forgequant"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific rules
]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["forgequant"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["vectorbt.*", "aiomql.*", "chromadb.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--tb=short",
    "--cov=forgequant",
    "--cov-report=term-missing",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
